namespace java com.ishangke.edunav.commoncontract.model

struct ActivityBo {
    1: i32 id
    2: string name
    3: i32 partnerId
    4: i32 courseId
    5: string remark
    6: i64 startTime
    7: i64 endTime
    8: i32 status
    9: i64 lastModifyTime
    10: i64 createTime
    11: i32 enabled
    12: i32 deleted
    13: i32 idStart
    14: i32 idEnd
    15: i32 idSet
    16: i32 partnerIdStart
    17: i32 partnerIdEnd    
    18: i32 courseIdStart
    19: i32 courseIdEnd
    20: i64 startTimeStart
    21: i64 startTimeEnd
    22: i64 endTimeStart
    23: i64 endTimeEnd
    24: i32 statusStart
    25: i32 statusEnd
    26: i64 lastModifyTimeStart
    27: i64 lastModifyTimeEnd
    28: i64 createTimeStart
    29: i64 createTimeEnd
}

